--- a/version_02/rap-latex-cv.tex
+++ b/version_02/rap-latex-cv.tex
@@ -173,13 +173,13 @@ $endfor$
 
 
 % Make lists without bullets
-\renewenvironment{itemize}{
-  \begin{list}{}{
-    \setlength{\leftmargin}{1.5em}
-  }
-}{
-  \end{list}
-}
+%\renewenvironment{itemize}{
+%  \begin{list}{}{
+%    \setlength{\leftmargin}{1.5em}
+%  }
+%}{
+%  \end{list}
+%}
 
 
 % Make parskips rather than indent with lists.
