--- a/version_02/rap-rmarkdown-cv.Rmd
+++ b/version_02/rap-rmarkdown-cv.Rmd
@@ -13,9 +13,9 @@ address: "1000 Tulip Lane · Davis · CA 95618"
 fontawesome: yes
 email: rapeek@ucdavis.edu
 github: ryanpeek
-#phone: "+353 1 408 4800"
+#phone: "+1 555 5555"
 web: ryanpeek.github.io
-updated: no
+updated: yes
 
 keywords: R Markdown, academic CV, template
 
@@ -26,94 +26,163 @@ linkcolor: blue
 urlcolor: blue
 ---
 
-# Employment
-
-*Center for Watershed Sciences, University of California, Davis*
-
-Graduate Student Researcher \hfill 2014-present
-
-Jr. Research Specialist \hfill 2011-2014
-
-*USDA Forest Service, Pacific Southwest Research Station*
-
-Biological Science Technician \hfill 2010
-
-*University of California, Berkeley*
-
-Research Assistant II  \hfill 2009-2010
-
-*Stillwater Sciences*
-
-Fish & Wildlife Biologist \hfill 8/2002–12/2011
-
-*National Park Service (Sequoia and Kings Canyon)*
-
-Biological Science Technician \hfill 2001  
-
-# Education
+# EDUCATION
 
 *University of California, Davis*, Ph.D. Ecology \hfill expected 2018  
 *University of San Francisco*, M.S. Biology \hfill 2010  
 *University of California, Davis*, B.S. Wildlife, Fish, & Conservation Biology \hfill 2002  
 
-# Teaching
+# EMPLOYMENT
 
-*Instructor, Software & Data Carpentry* \hfill 2016
+*Center for Watershed Sciences, UC Davis:*
 
-> Help teach researchers in science, engineering, medicine, and related disciplines the computing skills they need to get more done using open source and reproducible tools. Specifically, have helped teach ecology/natural science workshops at UC Davis and UC Berkeley. (http://software-carpentry.org/) (http://www.datacarpentry.org/)
+ > Graduate Student Researcher \hfill 2014--present
+
+ > Jr. Research Specialist \hfill 2011--2014
+
+*USDA Forest Service, Pacific Southwest Research Station:*
+
+ > Biological Science Technician \hfill 2010
+
+*University of California, Berkeley:*
+
+ > Research Assistant II  \hfill 2009--2010
+
+*University of California, Davis:*
+
+ > Research Assistant II  \hfill 2009
+
+*Stillwater Sciences:*
+
+ > Fish & Wildlife Biologist \hfill 2002-–2011
+
+*National Park Service (Sequoia & Kings Canyon):*
+
+ > Biological Science Technician \hfill 2001  
+
+# TEACHING
+
+*Instructor, Software/Data Carpentry* \hfill 2016
+
+> Teach researchers in science, engineering, medicine, and related disciplines the computing skills they need to get more done using open source and reproducible tools. Specifically, have taught ecology/natural science workshops at UC Davis and UC Berkeley. (http://software-carpentry.org/) (http://www.datacarpentry.org/)
 
 *Teaching Assistant, Ecogeomorphology, University of California Davis* \hfill 2015
 
-> Introduced advanced undergraduate students to multidisciplinary collaborative watershed and stream analysis through combined laboratory and field study of a selected stream system. Taught students from diverse backgrounds to work in interdisciplinary research teams to collect and analyze field data from the Tuolumne River system. Guided and taught in classroom, lab, and field, including a 3 day rafting trip on the Tuolumne River.
+> Taught advanced undergraduate students to multidisciplinary collaborative watershed and stream analysis through combined laboratory and field study of a selected stream system. Taught students from diverse backgrounds to work in interdisciplinary research teams to collect and analyze field data from the Tuolumne River system. Guided and taught in classroom, lab, and field, including a 3 day rafting trip on the Tuolumne River.
 
-*Lab Instructor/Teaching Assistant, General Biology, University of San Francisco* \hfill 2009-2010
+*Lab Instructor/Teaching Assistant, General Biology, University of San Francisco* \hfill 2009--2010
 
 > Lab instructor for undergraduate general biology lab; planned and conducted lab activities and led discussions for two semesters (molecular biology fall semester, organismal biology spring semester).  Gave weekly lecture to the class. Wrote weekly quizzes, graded students reports and exams
 
-# Publications
+# PUBLICATIONS
 
-## Books
+## **Journal Articles**
 
-Pearson, E.S. and John Wishart (eds.). 1943. *"Student's" Collected Papers* London: Biometrika Office.
+Yarnell, S., R. Peek, G. Epke and A. Lind. 2016. "Management of the Spring Snowmelt Recession in Regulated Systems." *JAWRA Journal of the American Water Resources Association* 52(3): 723--736.
 
-## Journal Articles
+Grantham, T., K. Fesenmeyer, R. Peek, E. Holmes, A. Bell, R. Quiñones, N. Santos, J. Howard, J. Viers, P. Moyle. 2016. "Missing the boat on freshwater fish conservation in California." *Conservation Letters* 10.1111/conl.12249.
 
-Student. 1938. "Comparison between Balanced and Random Arrangements on Field Plots." *Biometrika* 29(3-4): 363--378.
+Howard, J. K., K. R. Klausmeyer, K. A. Fesenmyer, J. Furnish, T. Gardali, T. Grantham, J. V. Katz, S. Kupferberg, P. McIntyre, P. B. Moyle, P. R. Ode, R. Peek, R. M. Quinones, A. C. Rehn, N. Santos, S. Schoenig, L. Serpa, J. D. Shedd, J. Slusark, J. H. Viers, A. Wright and S. A. Morrison. 2015. "Patterns of Freshwater Species Richness, Endemism, and Vulnerability in California." *PLoS One* 10(7): e0130710.
 
-Student. 1936. "Co-operation in Large Scale Experiments." *Supplement to Journal of the Royal Statistical Society* 3(2): 115--136.
+## **Other Publications**
 
-Student. 1931. "On the *z* Test." *Biometrika* 23(3-4): 407-408.
+Yarnell, S.M, R.A. Peek, D.E. Rheinheimer, A.J. Lind, and J.H. Viers. 2013. "Management of the Spring Snowmelt Recession: An Integrated Analysis of Empirical, Hydrodynamic, and Hydropower Modeling Applications." Final Report. California Energy Commission. Publication number: CEC-500-2013. 137 pp.
 
-Student. 1931. "The Lanarkshire Milk Experiment." *Biometrika* 23(3-4): 398--406.
+Viers, J.H., SE Purdy, R.A. Peek, A. Fryoff-Hung, N.R. Santos, J.V.E. Katz, J.D. Emmons, D.V. Dolan, and S.M. Yarnell. 2013. "Montane Meadows in the Sierra Nevada: Changing Hydroclimatic Conditions and Concepts for Vulnerability Assessment." Center for Watershed Sciences Technical Report (CWS-2013-01), University of California, Davis. 63 pp.
 
-Student. 1929. "Statistics in Biological Research." *Nature* 124: 93
+Yarnell, S., A. Lind, C. Bondi, R. Peek, and J. Mount. 2011. "Validation of Regional Habitat Suitability Criteria and Instream Flow Modeling Applications for the Foothill Yellow-Legged Frog (*Rana boylii*)." Final Report. California Energy Commission, PIER. Publication number: CEC-500-2011.
 
-Student. 1927. "Errors of Routine Analysis." *Biometrika* 19(1-2): 151--164.
+Peek, R. 2010. "Landscape Genetics of Foothill Yellow-legged Frogs (*Rana boylii*) in regulated and unregulated rivers: Assessing connectivity and genetic fragmentation." Master’s Thesis, Biology Department. University of San Francisco, CA. 69 pp.
 
-Student. 1926. "Mathematics and Agronomy." *Journal of the American Society of Agronomy* 18.
+## **Acknowledged**
 
-Student. 1925. "New Tables for Testing the Significance of Observations." *Metron* 5(3): 105--108.
+Bondi, C.A., S.M. Yarnell, and A.J. Lind. 2013.  "Transferability of habitat suitability criteria for a stream breeding frog (*Rana boylii*) in the Sierra Nevada, California." *Herpetological Conservation and Biology* 8(1):88-–103.
 
-Student. 1923. "On Testing Varieties of Cereals." *Biometrika* 15(3-4): 271--293.
+Kupferberg, S.J., W.J. Palen, A.J. Lind, S. Bobzien, A. Catenazzi, J. Drennan, and M.E. Power. 2012. "Effects of Flow Regimes Altered by Dams on Survival, Population Declines, and Range-Wide Losses of California River-Breeding Frogs." *Conservation Biology* 26(3): 513--524.
 
-Student. 1921. "An Experimental Determination of the Probable Error of Dr. Spearman's Correlation Co-efficient" *Biometrika* 13(2-3): 263--282.
+Knapp, R. A., D.M. Boiano, V.T. Vredenburg. 2007. "Removal of nonnative fish results in population expansion of a declining amphibian (mountain yellow-legged frog, *Rana muscosa*)." *Biological Conservation* 135(1): 11--20. 
 
-Student. 1917. "Tables for Estimating the Probability That the Given Mean of a Unique Sample of Observations Lies between $-\infty$ and Any Given Distance of the Mean of the Population from Which the Sample Is Drawn." *Biometrika* 11(4): 414--417.
+# PRESENTATIONS
 
-Student. 1909. "The Distribution of the Means of Samples Which Are Not Drawn at Random." *Biometrika* 7(1-2): 210--214.
+**2016. Peek, R., H. Dahlke, S. Yarnell.** "Linking Water Source Signatures with Native Amphibian Breeding Timing in a Northern Sierra Nevada Watershed." Society for Freshwater Science Annual Meeting, Sacramento 21--26 May.
 
-Student. 1908. "Probable Error of a Correlation Coefficient." *Biometrika* 6(2-3): 302--310.
+**2014. Viers, J. H. and R. A. Peek.** "Hydroclimatic Vulnerability Assessment of Sierra Nevada Montane Meadows." Abstract 14639, Joint Aquatic Sciences Meeting, Portland, OR, 16--23 May. 
 
-Student. 1908. "The Probable Error of a Mean." *Biometrika* 6(1): 1--25.
+**2013. Yarnell, S. M. and R.A. Peek.** "Management of the Spring Snowmelt Recession in Regulated Systems." Abstract EP54A-03, Fall Meeting, AGU, San Francisco, CA, 3--7 Dec.
 
-Student. 1907. "On the Error of Counting with a Haemacytometer." *Biometrika* 5(3): 351--360.
+**2013. Peek. R. A. and S. M. Yarnell.**  "Science Informing Monitoring."  Invited Speaker. Sacramento River Watershed Program Watershed Management Workshop.  Santa Cruz, CA.  September, 2013.
 
-## Other Publications
+**2013. Null, S. E., M. Akhbari, S.T. Ligare, D.E. Rheinheimer, R.A. Peek, S.M. Yarnell, J.H. Viers.**  "Modeling climate change effects on stream temperatures in regulated rivers."  Abstract GC23C-0951, Fall Meeting, AGU, San Francisco, CA, 3--7 Dec.
 
-Student. 1905. "The Pearson Co-efficient of Correlation." Supplement to Report of 1904, Arthur Guinness Son & Company.
+**2013. Rheinheimer, D.E., M. Akhbari, R.A. Peek, S.M. Yarnell, S.E. Null, J.H. Viers.**  "Incorporating climate change in flow regime alteration studies in hydropower licensing." Abstract H52G-04, Fall Meeting, AGU, San Francisco, CA, 3--7 Dec.
 
-Student. 1904. "The Application of the 'Law of Error' to the Work of the Brewery." Report, Arthur Guinness Son & Company.
+**2013. Peek, R. A. and S. M. Yarnell.** "Plasticity of Breeding in Foothill Yellow-legged Frogs (*Rana boylii*) Relating to the Spring Snowmelt Recession in the Sierra Nevada." Invited Speaker. Amphibian Population Task Force, Arcata, CA, Jan. 
 
-# References
+**2013. Peek, R.A., S.M. Yarnell and J.H. Viers.** "Management of the Spring Snowmelt Recession. Inter-agency workshop on flow management in the Yuba watershed." Coordinated by Yuba County Water Agency and US Forest Service, 10 June.
+
+**2013. Yarnell, S.M., C.A. Jeffres, R.A. Peek, and J.H. Viers.** "What is a natural hydrograph in regulated rivers?  The science of natural flows to the Delta." Ecological response to the unregulated flow regime in California’s Sierra Nevada:  Center for Aquatic Biology & Aquaculture Seminar and Workshop. Davis, CA, Jan.
+
+**2012. Yarnell, S.M., R. A. Peek, J.H. Viers.** "Effects of the spring snowmelt recession on abiotic and biotic conditions in northern Sierra Nevada CA rivers with varying flow regimes." Abstract EP23C-0840, Fall Meeting, AGU, San Francisco, CA, 3--7 Dec.
+
+**2012. Viers, J.V., R.A. Peek, S.E. Purdy, J.D. Emmons, S.M. Yarnell.** "Hydroclimatic alteration increases vulnerability of montane meadows in the Sierra Nevada, California." Abstract GC11B-0986, Fall Meeting, AGU, San Francisco, CA, 3--7 Dec.
+
+**2012. Peek, R., J. Viers, and S. Yarnell.** "Using sensitive montane species as indicators of hydroclimatic change in meadow ecosystems of the Sierra Nevada, California." Invited Speaker. Abstract GC11A-0972, Fall Meeting, AGU, San Francisco, CA, 2--7 Dec.
+
+**2011. Peek, R. A. and J. Dever.** "Landscape genetics of foothill yellow-legged frogs (*Rana boylii*) in regulated and unregulated watersheds: assessing genetic fragmentation and habitat connectivity." Invited Speaker. Amphibian Population Task Force, Yosemite National Park, Yosemite Valley, CA, Jan.
+
+**2011. Shepley, H., R. Peek, C. Champe, and A. Herman.** "Evaluating Potential Habitat and Temperature Limiting Factors for Foothill Yellow-Legged Frogs (*Rana boylii*) in the McCloud River Downstream of McCloud Dam." Stillwater Sciences and PG&E. Amphibian Population Task Force, Yosemite National Park, Yosemite Valley, CA, Jan.
+
+**2010. Peek, R. and J. Dever.** "Landscape genetics of foothill yellow-legged frogs (*Rana boylii*) in regulated and unregulated watersheds: assessing genetic fragmentation and habitat connectivity." Invited Speaker. University of San Francisco, CA. Annual Joint Meeting of Ichthyologists and Herpetologists.Providence, RI, Jul.
+
+**2010. Peek, R. and J. Dever.** "Landscape genetics of foothill yellow-legged frogs (*Rana boylii*) in regulated and unregulated watersheds: assessing genetic fragmentation and habitat connectivity." Invited Speaker. Bay Area Conservation Biology Symposium, San Francisco State University, CA, Dec.
+
+**2009. Orr, B. K., C. S. Riebe, and R. A. Peek.** "Linking biological responses to river processes: a focal species approach to restoration and management of the Sacramento River." National Conference on Ecosystem Restoration, Los Angeles, California, 20--24 Jul.
+
+**2006. Peek, R. and S. Khandwala.** "*Rana boylii* Plasticity and Management Under Dam-Controlled Flows in the Northern West-Slope Sierra Nevada." Stillwater Sciences. Invited Speaker. Declining Amphibian Populations Task Force, Arcata, CA, 2006, Jan.
+
+# PUBLIC MEDIA
+
+“The Aggie Brickyard.” Lead Editor & Graphic Designer,  2015--present.  
+
+> http://egsa.ucdavis.edu/blog/2016-06-16-second-volume-of-the-aggie-brickyard-is-published/
+
+“A Watershed Moment.” UC Davis Magazine, Spring 2014.
+
+> http://ucdavismagazine.ucdavis.edu/issues/sp14/watershed_momentum.html
+
+“Cool and Collected.” College of Agricultural and Environmental Sciences Outlook, Spring 2013.
+
+> http://www.caes.ucdavis.edu/news/publications/outlook
+
+"A Summer Spent Saving Frogs." Sierra Nature Notes. 2002.  
+
+> http://sierranaturenotes.com/naturenotes/SavingFrogs.htm
+
+# AWARDS
+
+**2016**  *Best Oral Presentation for Basic Research*, Society for Freshwater Science Annual Conference, Sacramento CA
+
+**2015**  *Henry A. Jastro Research Award*, UC Davis College of Agricultural and Environmental Sciences
+
+**2014**  *Ecology Fellowship*, UC Davis Graduate Group in Ecology
+
+# PROFESSIONAL AFFILIATIONS & TRAINING	  
+
+  - CDFW Scientific Collecting Permit #6881
+  - Software & Data Carpentry Instructor
+  - Davis R Users Group - Co-Administrator
+  - American Society of Ichthyologists and Herpetologists (ASIH)
+  - Society for Study of Amphibians and Reptiles (SSAR)
+  - Ecology Society of America (ESA)
+  - Society for Freshwater Science (SFS)
+  - Whitewater Rafting Guide, Outdoor Adventures, UC Davis, 2013--present
+  - Wilderness First Aid, Outdoor Adventures, UC Davis, 2015
+  - River Rescue Certification, Sierra Rescue/Rescue 3 International, Coloma CA, 2013
+  - Rare Pond Species (Western Pond Turtle, California Red-Legged Frog, and California Tiger Salamander) Survey Techniques Workshop (Laguna Foundation), April 2012
+  - Biology and Management of the California Red Legged Frog Workshop, Santa Cruz County Resource Conservation and Elkhorn Slough Coastal Training Program, Santa Cruz, CA, March 2007
+  - Western Pond Turtle Workshop: Ecology and Conservation, The Wildlife Society, San Francisco Bay Area Chapter, Sonoma State, CA, April 2005
+  - Giant Garter Snake Workshop, The Wildlife Society, Sacramento-Shasta Chapter, Elk Grove, CA. September 2003
+
+# REFERENCES
 
 Available upon request
