tested with ubuntu gnome Rstudio

--- a/Rmarkdown/rap-2pg-cv.Rmd
+++ b/Rmarkdown/rap-2pg-cv.Rmd
@@ -126,7 +126,7 @@ Recipient of scholarship from **Otsuka Toshimi Scholarship Foundation** \hfill 2
 
   - Chinese Mandarin: Native Speaker
   - Chinese Hokkien: Native Speaker
-  - English: Fluent
+  - English: Fluent (IELTS overall: 8; L 8.5, R 8.5, W 7, S 7) - 2017.1.7
   - Japanese: Advanced (Japanese Language Proficiency Level 1)
   
 # REFERENCES
